Quest registry done, quests create. Headache.

--- a/src/main/resources/assets/betterquests/betterquests.conf
+++ b/src/main/resources/assets/betterquests/betterquests.conf
@@ -2,6 +2,7 @@
 Quest-Lines=[]
 
 # I'm just going to slap this here for the sake of convenience. You'll undoubtedly need this later
+# This is a list of all the mods and the events inside those mods that BetterQuests supports and can use
 # AreaManager
 #   AreaEnterEvent
 #   RegionEnterEvent
