--- a/src/main/resources/assets/betterquests/questline.conf
+++ b/src/main/resources/assets/betterquests/questline.conf
@@ -9,5 +9,5 @@ Requirement {
   Permissions-Not-Have=[]
 }
 # Creates a folder per entry in this list in "/config/betterquests/questlines/<questline>" for you to configure the quests in this questline and other stuff
-# And in each folder, you'll find a "quests.conf" which a big ole file you'll have all your task data for that quest
+# And in each folder, you'll find a "data.conf" which a big ole file you'll have all your task data for that quest and a "requirements.conf" for setting requirements needed to complete that quest, if any
 Quests=[]
